--- a/packages/mbed-ls/requirements.txt
+++ b/packages/mbed-ls/requirements.txt
@@ -1,2 +1,3 @@
-PrettyTable<=1.0.1
+PrettyTable<=1.0.1; python_version < '3.6'
+prettytable>=2.0,<3.0; python_version >= '3.6'
 mbed-os-tools>=0.0.9
