--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ PySerial>=3.0,<4.0
 requests>=2.0,<3.0
 intelhex>=2.0,<3.0
 future
-PrettyTable<=1.0.1
+PrettyTable<=1.0.1; python_version < '3.6'
+prettytable>=2.0,<3.0; python_version >= '3.6'
 fasteners
 appdirs>=1.4,<2.0
 junit-xml>=1.0,<2.0
