--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,15 +58,15 @@ stages:
               sendCoverage: "false"
             windows_python_3_6:
               python.version: "3.6"
-              imageName: vs2017-win2016
+              imageName: windows-2019
               sendCoverage: "false"
             windows_python_3_7:
               python.version: "3.7"
-              imageName: vs2017-win2016
+              imageName: windows-2019
               sendCoverage: "false"
             windows_python_3_8:
               python.version: "3.8"
-              imageName: vs2017-win2016
+              imageName: windows-2019
               sendCoverage: "false"
 
         pool:
