ci: Specify the image for the CiCheckpoint stage
Without specifying which image to use for the CiCheckpoint stage, Azure
will default to using Ubuntu 16.04. However, Ubuntu 16.04 has been
removed from Azure, so the pipeline stage will end up cancelling itself
with the following error:

    ##[warning]An image label with the label Ubuntu16 does not exist.
    ,##[error]The remote provider was unable to process the request.
    Pool: Azure Pipelines
    Image: Ubuntu16

Explicitly specify the image to use in the CiCheckpoint stage to ensure
the stage doesn't cancel itself.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -150,6 +150,8 @@ stages:
     jobs:
       - job: ChecksPassing
         displayName: 'Checks Passing'
+        pool:
+          vmImage: ubuntu-20.04
         # A dummy job is required due to a bug in Azure which runs the previous job if nothing is defined.
         steps:
           - bash: echo "All prerequisite stages have passed and the package should be suitable for release."
