ci: Specify the image for PyPIProductionRelease
Without specifying which image to use for the PyPIProductionRelease
stage, Azure will default to using Ubuntu 16.04. However, Ubuntu 16.04
has been removed from Azure, so the pipeline stage will end up
cancelling itself with the following error:

    ##[warning]An image label with the label Ubuntu16 does not exist.
    ,##[error]The remote provider was unable to process the request.
    Pool: Azure Pipelines
    Image: Ubuntu16

Explicitly specify the image to use in the PyPIProductionRelease stage
to ensure the stage doesn't cancel itself.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -165,6 +165,8 @@ stages:
     jobs:
       - deployment: PyPIProductionRelease
         displayName: 'PyPI Production Release'
+        pool:
+          vmImage: ubuntu-20.04
         # Create an environment to keep track of PyPI releases
         environment: 'PyPI Release'
         strategy:
